# edif

./: .gitignore  INSTALL  Makefile.am  Makefile.in  README.md  config.h  config.h.in  config.status  configure  configure.ac  edif_config.h  edif_config.h.in  libtool  stamp-h1
src/: Makefile.am  Makefile.in  edif.cc  edif2.cc  edif2.hh
