
lib_LTLIBRARIES = libedif.la
noinst_LTLIBRARIES =

libedif_la_SOURCES = edif.cc
#libedif_la_SOURCES = edif.cc edif.hh

#libedif_la_LDFLAGS = -L/usr/local/lib/apl -lapl
libedif_la_CPPFLAGS = -I$(APL_SOURCES)
#libedif_la_CPPFLAGS = -I$(APL_SOURCES) $(PLPLOT_CFLAGS)

#libedif_la_LIBADD = $(PLPLOT_LIBS)

